# big-chicken-dot-com

./: .gitignore
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: handler.rs  main.rs  open_meteo.rs  stats.rs
frontend/: forecast.html  index.html
infra/: package-lock.json  package.json
infra/lib/: infra-stack.ts
