[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

# The binary must be named `bootstrap` for the AWS `provided.al2023` custom runtime.
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
